--- a/bot/languages/en/results/CRFEntityExtractor_report.json
+++ b/bot/languages/en/results/CRFEntityExtractor_report.json
@@ -1,4 +1,82 @@
 {
+  "air_conditioning": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 8
+  },
+  "thermal_scanner": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 4
+  },
+  "influenza": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 2
+  },
+  "world_region": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 14
+  },
+  "country_code": {
+    "precision": 0.9993823347745522,
+    "recall": 0.9871873093349604,
+    "f1-score": 0.9932473910374462,
+    "support": 1639
+  },
+  "antibiotics": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 2
+  },
+  "saline": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 3
+  },
+  "garlic": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 2
+  },
+  "uv_lamp": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 12
+  },
+  "visors": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 5
+  },
+  "5G": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 5
+  },
+  "hand_dryer": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 4
+  },
+  "pneumonia_vaccine": {
+    "precision": 1.0,
+    "recall": 1.0,
+    "f1-score": 1.0,
+    "support": 4
+  },
   "virus": {
     "precision": 1.0,
     "recall": 0.4,
@@ -9,36 +87,30 @@
     "precision": 1.0,
     "recall": 1.0,
     "f1-score": 1.0,
-    "support": 27
+    "support": 28
   },
-  "world_region": {
+  "sesame_oil": {
     "precision": 1.0,
     "recall": 1.0,
     "f1-score": 1.0,
-    "support": 14
-  },
-  "country_code": {
-    "precision": 0.9993654822335025,
-    "recall": 0.9868421052631579,
-    "f1-score": 0.9930643127364438,
-    "support": 1596
+    "support": 7
   },
   "micro avg": {
-    "precision": 0.9993823347745522,
-    "recall": 0.9853836784409257,
-    "f1-score": 0.9923336399877337,
-    "support": 1642
+    "precision": 0.999418942475305,
+    "recall": 0.9862385321100917,
+    "f1-score": 0.9927849927849928,
+    "support": 1744
   },
   "macro avg": {
-    "precision": 0.9998413705583756,
-    "recall": 0.8467105263157895,
-    "f1-score": 0.8911232210412539,
-    "support": 1642
+    "precision": 0.9999613959234095,
+    "recall": 0.961699206833435,
+    "f1-score": 0.9727922476541261,
+    "support": 1744
   },
   "weighted avg": {
-    "precision": 0.9993832580052802,
-    "recall": 0.9853836784409257,
-    "f1-score": 0.991953584643427,
-    "support": 1642
+    "precision": 0.9994195221877816,
+    "recall": 0.9862385321100917,
+    "f1-score": 0.9924252389722003,
+    "support": 1744
   }
 }
