--- a/bot/languages/en/domain.yml
+++ b/bot/languages/en/domain.yml
@@ -9,7 +9,7 @@ slots:
     initial_value: 0.0
   bot_name:
     type: text
-    initial_value: Helena
+    initial_value: Helen
   bot_location:
     type: text
     initial_value: en
@@ -18,7 +18,7 @@ slots:
     initial_value: false
   bot_version:
     type: text
-    initial_value: "0.1"
+    initial_value: "0.2"
   bot_time_acre:
     type: text
   bot_time_fnoronha:
