--- a/bot/languages/en/domain.yml
+++ b/bot/languages/en/domain.yml
@@ -18,7 +18,7 @@ slots:
     initial_value: false
   bot_version:
     type: text
-    initial_value: "0.3.0"
+    initial_value: "0.3.1"
   bot_time_acre:
     type: text
   bot_time_fnoronha:
@@ -646,16 +646,10 @@ responses:
         answers:
           - type: ssml
             ssml:
-              <speak>Common signs of infection include respiratory symptoms, fever,
-              cough, shortness of breath and breathing difficulties. In more
-              severe cases, the infection can cause pneumonia, severe acute
-              respiratory syndrome, kidney failure and even death.</speak>
+              <speak>The most common symptoms of Covid 19 are fever, dry cough, and tiredness. Other symptoms that are less common and may affect some patients include aches and pains, nasal congestion, headache, conjunctivitis, sore throat, diarrhea, loss of taste or smell or a rash on skin or discoloration of fingers or toes. These symptoms are usually mild and begin gradually. Some people become infected but only have very mild symptoms.</speak>
           - type: html
             text:
-              <p>Common signs of infection include respiratory symptoms, fever, cough,
-              shortness of breath and breathing difficulties. In more severe
-              cases, the infection can cause pneumonia, severe acute respiratory
-              syndrome, kidney failure and even death.<a
+              <p>The most common symptoms of COVID-19 are fever, dry cough, and tiredness. Other symptoms that are less common and may affect some patients include aches and pains, nasal congestion, headache, conjunctivitis, sore throat, diarrhea, loss of taste or smell or a rash on skin or discoloration of fingers or toes. These symptoms are usually mild and begin gradually. Some people become infected but only have very mild symptoms.<a
               href='https://www.who.int/news-room/q-a-detail/q-a-coronaviruses'
               target='_blank'>(1)</a></p>
           - type: hints
@@ -682,9 +676,7 @@ responses:
               Respiratory Syndrome (SARS) are related to each other genetically,
               but they are different. <br>SARS is more deadly but much less
               infectious than COVID-19. <br>There have been no outbreaks of SARS
-              anywhere in the world since 2003.<a
-              href='https://www.who.int/news-room/q-a-detail/q-a-coronaviruses'
-              target='_blank'>(1)</a></p>
+              anywhere in the world since 2003.</p>
           - type: hints
             options:
               - label: About COVID-19
@@ -2554,6 +2546,9 @@ responses:
               COVID-19 who coughs out or exhales droplets.<a
               href='https://www.who.int/news-room/q-a-detail/q-a-coronaviruses'
               target='_blank'>(1)</a></p>
+          - type: youtube
+            thumbnailURL: https://youtu.be/677pSwGauqs
+            youtubeId: 677pSwGauqs
           - type: hints
             options:
               - label: Preventive Measures
